force-app/main/default/objects/DocGen_Signature_Audit__c/DocGen_Signature_Audit__c.object-meta.xml
<CustomObject>
    <label>DocGen Signature Audit</label>
    <nameField>
        <displayFormat>AUD-{000000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocGen Signature Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>