force-app/main/default/objects/DocGen_Signature_Audit__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
    >The Contact record associated with the signer. Provides direct traceability from audit to CRM contact for compliance reporting.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Signature Audits</relationshipLabel>
    <relationshipName>Signature_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>