force-app/main/default/objects/DocGen_Signature_Audit__c/fields/Document_Hash_SHA256__c.field-meta.xml
<CustomField>
    <fullName>Document_Hash_SHA256__c</fullName>
    <label>Document Hash (SHA-256)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>