force-app/main/default/objects/DocGen_Signature_Audit__c/fields/PIN_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>PIN_Verified_At__c</fullName>
    <description>Timestamp when the signer verified their email PIN. Proves inbox control at signing time.</description>
    <label>PIN Verified At</label>
    <type>DateTime</type>
</CustomField>