force-app/main/default/objects/DocGen_Signature_Audit__c/fields/Signer__c.field-meta.xml
<CustomField>
    <fullName>Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
    >Links this audit record to the specific signer who signed the document. Used for multi-signer compliance tracking.</description>
    <label>Signer</label>
    <referenceTo>DocGen_Signer__c</referenceTo>
    <relationshipLabel>Signature Audits</relationshipLabel>
    <relationshipName>Signature_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>