force-app/main/default/objects/DocGen_Signature_Audit__c/fields/Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Signer_Email__c</fullName>
    <description
    >The email address of the person who signed. Denormalized for compliance reporting and audit trails.</description>
    <label>Signer Email</label>
    <type>Email</type>
</CustomField>