force-app/main/default/objects/DocGen_Signature_Audit__c/fields/Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Signer_Name__c</fullName>
    <description>The name of the person who signed. Denormalized from the Signer or Request record for compliance reporting.</description>
    <label>Signer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>